<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/register_et_fname"
        android:hint="First Name"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/register_et_lname"
        android:hint="Last Name"
        app:layout_constraintTop_toBottomOf="@+id/register_et_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/register_et_username"
        android:hint="Username"
        app:layout_constraintTop_toBottomOf="@+id/register_et_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/register_et_password"
        android:hint="Password"
        app:layout_constraintTop_toBottomOf="@id/register_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/register_et_verify"
        android:hint="Verify Password"
        app:layout_constraintTop_toBottomOf="@+id/register_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/register_et_email"
        android:hint="Email"
        app:layout_constraintTop_toBottomOf="@+id/register_et_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/register_tv_bday"
        android:text="Enter your Birthday :"
        app:layout_constraintTop_toBottomOf="@id/register_et_email"
        android:padding="8dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <DatePicker
        android:id="@+id/register_et_birthday"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        android:text="Birthday"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_bday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register_tv_hint"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/register_et_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:text="Register and Login"
        android:id="@+id/register_btn_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>