<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.simplesocial.viewmodel.ProfileViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ProfileFrag_img_avi"
            android:src="@color/dark_khaki"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <TextView
            android:id="@+id/ProfileFrag_tv_username"
            android:textSize="24sp"
            android:text="@={viewModel.user.username}"
            app:layout_constraintTop_toBottomOf="@id/ProfileFrag_img_avi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ProfileFrag_tv_fName"
            android:textSize="24sp"
            android:text="@={viewModel.user.fName}"
            app:layout_constraintTop_toBottomOf="@id/ProfileFrag_tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ProfileFrag_tv_lName"
            android:textSize="24sp"
            android:text="@={viewModel.user.lName}"
            app:layout_constraintTop_toBottomOf="@id/ProfileFrag_tv_fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ProfileFrag_btn_Settings"
            android:text="Settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ProfileFrag_btn_logout"
            android:drawableStart="@drawable/ic_baseline_settings_24"
            app:layout_constraintHorizontal_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/ProfileFrag_btn_logout"
            android:text="Logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ProfileFrag_btn_Settings"
            app:layout_constraintHorizontal_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>