<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.simplesocial.viewmodel.ProfileViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_tv_username"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewModel.user.username}"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settings_et_fname"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@={viewModel.user.fName}"
        app:layout_constraintEnd_toStartOf="@id/settings_et_lname"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_tv_username" />

    <EditText
        android:id="@+id/settings_et_lname"
        android:text="@={viewModel.user.lName}"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/settings_et_fname"
        app:layout_constraintTop_toBottomOf="@id/settings_tv_username"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/Settings_btn_confirm"
        android:text="Confirm Changes"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>